剩下二级选项没写和横向滑动小bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>一起约</title>
-    <script src="scripts/flexible.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">    <script src="scripts/flexible.js"></script>
     <link rel="stylesheet" href="styles/reset.css"/>
     <link rel="stylesheet" href="styles/flexible.css"/>
     <link rel="stylesheet" href="styles/iconfont.css"/>
